bk_ida/gccida/g2/recog_26
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:33987:4: error: expected ';' after expression
rtx x6; // [rsp+0h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:33987:5: error: use of undeclared identifier 'x6'
rtx x6; // [rsp+0h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:34001:4: error: expected ';' after expression
rtx x6n; // [rsp+0h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:34001:5: error: use of undeclared identifier 'x6n'
rtx x6n; // [rsp+0h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:34059:4: error: expected ';' after expression
rtx x6ct; // [rsp+0h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:34059:5: error: use of undeclared identifier 'x6ct'
rtx x6ct; // [rsp+0h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:34062:4: error: expected ';' after expression
rtx x6cw; // [rsp+0h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:34062:5: error: use of undeclared identifier 'x6cw'
rtx x6cw; // [rsp+0h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:34063:4: error: expected ';' after expression
rtx x6cx; // [rsp+0h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:34063:5: error: use of undeclared identifier 'x6cx'
rtx x6cx; // [rsp+0h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:34068:4: error: expected ';' after expression
rtx x6dc; // [rsp+0h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:34068:5: error: use of undeclared identifier 'x6dc'
rtx x6dc; // [rsp+0h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:34072:4: error: expected ';' after expression
rtx x6dg; // [rsp+0h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:34072:5: error: use of undeclared identifier 'x6dg'
rtx x6dg; // [rsp+0h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:34106:33: error: expected expression
if ( !register_operand( *( rtx *)( v6 + 8), QImode) ) 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:34109:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v7; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:34116:31: error: expected ')'
if ( !register_operand( ( rtx)v40, QImode) ) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:34116:23: note: to match this '('
if ( !register_operand( ( rtx)v40, QImode) ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:34118:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v40; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/insn-recog.c:34118:33: error: expected ';' after expression
recog_data_0.operand[1] = ( rtx)v40; 
                                ^
                                ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog_26/src/obj/insn-recog.o] Error 1
